Output data in DOM

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello ,Vue :)</h1>
 
-    <div id = 'app'></div>
+    <div id = 'app'>
+        <!-- called from vue -->
+        <p>{{ title }}</p>
+    </div>
 
     <script src="app.js"></script>
 </body>
