--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id = 'app'>
         <!-- called from vue -->
-        <p>{{ title }}</p>
+        <p>{{ title }} - {{author}} - {{age}}</p>
     </div>
 
     <script src="app.js"></script>
