--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <h1>Hello ,Vue :)</h1>
 
-    <div id = 'app'></div>
+    <div id = 'app'>
+        <button v-on:click = "age++">Increase age</button>
+    </div>
 
     <script src="app.js"></script>
 </body>
