--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Hello ,Vue :)</h1>
 
     <div id = 'app'>
+        <p>{{ title }} - {{author}} - {{age}}</p>
         <button v-on:click = "age++">Increase age</button>
     </div>
 
