--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id = 'app'>
         <p>{{ title }} - {{author}} - {{age}}</p>
         <button v-on:click = "age++">Increase age</button>
+        <div @click = "title = 'Something else'">change title</div>
     </div>
 
     <script src="app.js"></script>
