--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <button @click = "toggleShowbooks"> 
             <span v-if = "showBooks">Hide Books</span>
-            <span v-if = "!showBooks">Show Books</span>
+            <span v-else>Show Books</span>
         </button>
         
     </div>
