--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
             <span v-if = "showBooks">Hide Books</span>
             <span v-else>Show Books</span>
         </button>
-        
+      
+        <div v-show = 'showBooks'>Currently showing books</div>
+
+
     </div>
+
 
     <script src="app.js"></script>
 </body>
