mousemove with offsets

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="box" @mouseover='handleEvent'>Mouseover(enter)</div>
         <div class="box"@mouseleave='handleEvent'>Mouse leave</div>
         <div class="box" @dblclick='handleEvent($event,5)'>Double click</div>
-        <div class="box"></div>
+        <div class="box" @mousemove='handleMousemove'>position - {{ x }} {{ y }}</div>
     </div>
 
     <script src="app.js"></script>
