v-bind for anchor tags

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
                     <p>{{book.author}}</p>
                 </li>
             </ul>
-
         </div>
+
+        <!-- binding anchor tags and imgs -->
+        <!-- v-bind shortcut is a colon -->
+        <a v-bind:href="url">Best Website Ever</a>
 
     </div>
 
