v-bind for anchor tags ii

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <!-- binding anchor tags and imgs -->
-        <!-- v-bind shortcut is a colon -->
+        <!-- v-bind shortcut is a colon and it can be used in other elements to assign attr eg classes -->
         <a v-bind:href="url">Best Website Ever</a>
 
     </div>
